- Added: Parameter to enable/disable static weapon defenses at maintarget, by longtimegamer
- Added: RADIOPROTOCOL for the player can be disabled in the Status Dialog (not sure yet if it really does what it should)
- Added: d_uids_def_choppers (also available in dom_settings table); if the array is filled with player UIDs (strings) only those players can fly the initial choppers at base
- Changed: CAS with very short cooldown (90 secs) if artillery is set to unlimited, by longtimegamer
- Changed: Added visibility check for player and AI names over the head, means, players see the names above head if the unit is visible and not all the time
- Changed: Maintarget prisoner event now has a suicide bomb if the rescue is botched, by longtimegamer
- Changed: Enemy AI vehicle island patrols are back
- Changed: You can now disable ACE medical system and use the internal mission Revive when ACE is running (d_ACEMedicalR in description.ext, "Disable ACE medical revive (if ACE is used) and use mission revive" in lobby, finally in, somehow got lost before)
- Changed: SAT View removed from MHQs in the TT version (enemy could spott opponent MHQ too easily)
- Changed: Removed the marker tiles at main targets in the TT version, back to solid filled circle again
- Changed: If ACE is used the mission pylon loadout dialog is disabled and you have to use the ACE pylon dialog (razorclam wanted it so blame him for it :)
- Changed: Enemy mobile HQs are now spawned with snipers on the roof
- Changed: If d_MTTowerSatchelsOnly if set to 1 (disabled) then it there is no satchel check for main target radio tower, main target side mission, main target barracks and mobile MHQ
- Changed: Reduced radius of many addActions
- Fixed: If a player can escape jail with a mod like enhanced movement put him back again into the jail if he is too far away; if he does it 10 times then the player will be banned for the running session