@@ -35,7 +35,7 @@ xr_cpr_time_add = 300;
 // if set to false no spectating dialog is shown, camera remains in player view
 xr_spectating = d_WithReviveSpectating == 0;
 
-call compile preprocessFileLineNumbers "revive\main.sqf";
+call compileScript ["revive\main.sqf", false];
 
 if (!isDedicated) then {
 	execVM "revive\init.sqf";
